[gd_scene load_steps=7 format=2]

[ext_resource path="res://Utilities/States/EnemyIdle.gd" type="Script" id=1]
[ext_resource path="res://Utilities/States/EnemyMove.gd" type="Script" id=2]
[ext_resource path="res://Utilities/States/Chase.gd" type="Script" id=3]
[ext_resource path="res://Utilities/States/EnemyDamaged.gd" type="Script" id=4]
[ext_resource path="res://Utilities/States/EnemyAttack.gd" type="Script" id=5]
[ext_resource path="res://Utilities/States/StateMachine.gd" type="Script" id=6]

[node name="StateMachine" type="Node"]
script = ExtResource( 6 )

[node name="Idle" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Move" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Attack" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Chase" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Damaged" type="Node" parent="."]
script = ExtResource( 4 )

[connection signal="state_transition" from="Idle" to="." method="_on_state_transition"]
[connection signal="state_transition" from="Move" to="." method="_on_state_transition"]
[connection signal="state_pop" from="Attack" to="." method="_on_state_pop"]
[connection signal="state_pop" from="Chase" to="." method="_on_state_pop"]
[connection signal="state_transition" from="Chase" to="." method="_on_state_transition"]
[connection signal="state_pop" from="Damaged" to="." method="_on_state_pop"]
